syntax = "proto3";

package api;

message InitStateRequest {
    repeated AccountState accounts = 1;
}

message InitStateResponse {
}

// We have to use strings/bytes for everything since protobuf doesn't support wide enough integers (e.g., addresses
// in ethereum are 160-bit hashes)
message AccountState {
    string nonce = 1;
    string address = 2;
    string balance = 3;
    map<string, string> storage = 4;
    string code = 5;
}

message Transaction {
    bool use_nonce = 1;
    string nonce = 2; // optional
    string caller = 3;
    bool is_call = 4;
    string address = 5; // defined if is_call = true
    string input = 6;
}

message ExecuteTransactionRequest {
    Transaction transaction = 1;
    bool simulate = 2; // true for eth_call
}

message ExecuteRawTransactionRequest {
    string data = 1;
}

message Log {
    // Todo: add logs from VM
}

message ExecuteTransactionResponse {
    string request = 1;
    Log log = 2;
    string used_gas = 3;
    bool status = 4;  // ExitedOk = true
    string result = 5;
    string hash = 6; // returned by eth_sendTransaction
}
